// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldSearch is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-label="aria-label"
      class="euiFieldSearch testClass1 testClass2"
      data-test-subj="test subject string"
      id="1"
      name="elastic"
      placeholder="Placeholder"
      type="search"
      value="1"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props fullWidth false is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props fullWidth true is rendered 1`] = `
<eui-form-control-layout
  fullwidth="true"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch euiFieldSearch--fullWidth"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isInvalid false is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="false"
  >
    <input
      class="euiFieldSearch"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isInvalid true is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <input
      class="euiFieldSearch"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isLoading false is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldSearch props isLoading true is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="search"
  isloading="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldSearch euiFieldSearch-isLoading"
      type="search"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;
